# sqids-c

./: .editorconfig  .gitignore  Makefile.am  README.md  configure.ac  sqids.pc.in
.github/workflows/: build.yml
m4/: ax_tls.m4
script/: gen-bl.sh  release.sh
src/: Makefile.am  bl.c  main.c  sqids.c  sqids.h  test_bl.c  test_shuffle.c  test_sqids.c  test_str.c
